public_html/components/todolist/components/tasks-list/style.css
.todolist-tasks {
    margin-left: 10px;
}

.todolist-task {
    width: 100%;
    min-height: 24px;
    margin-bottom: 2px;
    float: left;
}

.todolist-task-selected {
    background-color: #585858;
}

.todolist-task-grayed {
    color: #848484;
}

.todolist-task-completed {
    color: #06ce00;
}

.todolist-task-grayed-completed {
    color: #527b5b !important;
}

.todolist-task-controls {
    margin-right: 8px;
    width: 20px;
    height: 20px;
    background-image: url("icons/menu.png");
    cursor: pointer;
    float: left;
}

.todolist-task-controls-disabled {
    background-image: url("icons/menu-disabled.png");
}

.todolist-task-text {
    margin-top: 1px;
    width: 80%;
    font-size: 14px;
    float: left;
}

